# self_collision_cartesio_addon

./: CMakeLists.txt  README.md  package.xml
src/: SelfCollisionAvoidanceAddon.cpp
